# squarewave

./: .gdbinit  md407_crossfile.txt  meson.build
ld/: md407.x
src/: gpio.h  main.c  meson.build  scb.h  squarewave.c  squarewave.h  systick.c  systick.h  vector_table.h
src/md407/: meson.build  startup.S
src/md407/include/: board-constants.h
